service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service-svc-31
  namespace: lab-cnb
spec:
  ports:
    - port: 3001
  selector:
    app: shipping-service-31
  type: NodePort
