ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shipping-service-ingress-31
  namespace: lab-cnb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /shipping-service-31
        backend:
          serviceName: shipping-service-svc-31
          servicePort: 3001
